# AI-SE

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  PLAN.md  README.md  SPEC.md  SPEC_PROCESS.md  opencode.jsonc  pyproject.toml
src/harness/: __init__.py  action.py  agent.py  cli.py  config.py  credential.py  feedback.py  guardrail.py  llm.py  memory.py  prompts.py  tools.py
tests/integration/: test_demo.py
tests/unit/: test_action.py  test_agent.py  test_cli.py  test_config.py  test_credential.py  test_feedback.py  test_guardrail.py  test_llm.py  test_memory.py  test_prompts.py  test_tools.py
