[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent-harness"
version = "0.1.0"
description = "A coding agent harness - Agent = LLM + Harness"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "keyring>=24.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
harness = "harness.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]